<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_1"
        style="@style/ButStyle"
        android:text="@string/b_1"
        app:layout_constraintEnd_toStartOf="@+id/but_2"
        app:layout_constraintBottom_toTopOf="@+id/but_dot"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_2"
        style="@style/ButStyle"
        android:text="@string/b_2"
        app:layout_constraintEnd_toStartOf="@+id/but_3"
        app:layout_constraintBottom_toTopOf="@+id/but_0"
        app:layout_constraintStart_toEndOf="@+id/but_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_3"
        style="@style/ButStyle"
        android:text="@string/b_3"
        app:layout_constraintBottom_toTopOf="@+id/but_delete"
        app:layout_constraintEnd_toStartOf="@+id/but_multiply"
        app:layout_constraintStart_toEndOf="@+id/but_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_4"
        style="@style/ButStyle"
        android:text="@string/b_4"
        app:layout_constraintEnd_toStartOf="@+id/but_5"
        app:layout_constraintBottom_toTopOf="@+id/but_1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_5"
        style="@style/ButStyle"
        android:text="@string/b_5"
        app:layout_constraintEnd_toStartOf="@+id/but_6"
        app:layout_constraintBottom_toTopOf="@+id/but_2"
        app:layout_constraintStart_toEndOf="@+id/but_4" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_6"
        style="@style/ButStyle"
        android:text="@string/b_6"
        app:layout_constraintBottom_toTopOf="@+id/but_3"
        app:layout_constraintEnd_toStartOf="@+id/but_minus"
        app:layout_constraintStart_toEndOf="@+id/but_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_7"
        style="@style/ButStyle"
        android:text="@string/b_7"
        app:layout_constraintEnd_toStartOf="@+id/but_8"
        app:layout_constraintBottom_toTopOf="@+id/but_4"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_8"
        style="@style/ButStyle"
        android:text="@string/b_8"
        app:layout_constraintEnd_toStartOf="@+id/but_9"
        app:layout_constraintBottom_toTopOf="@+id/but_5"
        app:layout_constraintStart_toEndOf="@+id/but_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_9"
        style="@style/ButStyle"
        android:text="@string/b_9"
        app:layout_constraintBottom_toTopOf="@+id/but_6"
        app:layout_constraintEnd_toStartOf="@+id/but_plus"
        app:layout_constraintStart_toEndOf="@+id/but_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_dot"
        style="@style/ButStyle"
        android:text="@string/b_dot"
        app:layout_constraintEnd_toStartOf="@+id/but_0"
        app:layout_constraintBottom_toTopOf="@+id/but_equal"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_0"
        style="@style/ButStyle"
        android:text="@string/b_0"
        app:layout_constraintEnd_toStartOf="@+id/but_delete"
        app:layout_constraintBottom_toTopOf="@+id/but_equal"
        app:layout_constraintStart_toEndOf="@+id/but_dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_delete"
        style="@style/ButStyle"
        android:text="@string/b_del"
        app:layout_constraintBottom_toTopOf="@+id/but_equal"
        app:layout_constraintEnd_toStartOf="@+id/but_div"
        app:layout_constraintStart_toEndOf="@+id/but_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_equal"
        style="@style/ButStyle"
        android:text="@string/b_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_plus"
        style="@style/ButStyle"
        android:text="@string/b_plus"
        app:layout_constraintStart_toEndOf="@+id/but_9"
        app:layout_constraintBottom_toTopOf="@+id/but_minus"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_minus"
        style="@style/ButStyle"
        android:text="@string/b_minus"
        app:layout_constraintStart_toEndOf="@+id/but_6"
        app:layout_constraintBottom_toTopOf="@+id/but_multiply"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_multiply"
        style="@style/ButStyle"
        android:text="@string/b_mult"
        app:layout_constraintStart_toEndOf="@+id/but_3"
        app:layout_constraintBottom_toTopOf="@+id/but_div"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_div"
        style="@style/ButStyle"
        android:text="@string/b_div"
        app:layout_constraintStart_toEndOf="@+id/but_delete"
        app:layout_constraintBottom_toTopOf="@+id/but_equal"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="894dp"
        android:layout_height="997dp"
        app:layout_constraintBottom_toTopOf="@+id/but_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/drop_of_water" />


</androidx.constraintlayout.widget.ConstraintLayout>